# simeon

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  LICENSE  README.md  meson.build  meson_options.txt
.githooks/: pre-commit
.github/workflows/: README.md  coverage.yml  sanitizers.yml  tests.yml
benchmarks/: accuracy_bench.cpp  aho_corasick_bench.cpp  aho_corasick_da_bench.cpp  bench_prf.cpp  bench_vs_reference.cpp  bench_vs_reference_research.cpp  coordinate_experiment_support.cpp  coordinate_experiment_support.hpp  embedding_experiment_bench.cpp  experiment_support.cpp  experiment_support.hpp  family_atlas_experiment_support.cpp  family_atlas_experiment_support.hpp  fusion_experiment_support.cpp  fusion_experiment_support.hpp  meson.build  microbench.cpp  pq_query_bench.cpp  profile_fragment_geometry.cpp  profile_sab_smooth.cpp  recipe_accuracy_bench.cpp  reranker_experiment_bench.cpp  reranker_experiment_support.cpp  reranker_experiment_support.hpp  text_rank_bench.cpp
benchmarks/analysis/: phaseA_correlations.py
docs/: benchmarks.md  build.md  experimentation.md  pmi_projection.md  reference_fixture.md  research.md  router_design.md  sdm_results.md  training_free_saturation.md  works_cited.md
docs/research/: ac_entity_results.md  asymmetric_anchor_results.md  benchmarks.md  bm25f_results.md  component_architecture_design.md  concept_mining.md  corpus_adapter_design.md  fusion_entropy_alpha.md  generalizable_adapter_design.md  index.md  language_corpus_support.md  literature_synthesis.md  ltd_results.md  next_research_plans.md  paperbridge_synthesis_next.md  per_query_oracle_gap.md  phase11_c9_glove_arguana_results.md  phase12_poincare_sif_results.md  phase13_xprod_results.md  phase14_layered_results.md  phase15_dual_stage_results.md  phase16_router_results.md  phase17_recipe_router_results.md  phase1_c2c3_results.md  phase20_arguana_structure_results.md  phase21_arguana_text_structure_results.md  phase22_arguana_pair_discriminator_results.md  phase23_language_profile_scaffold.md  phase24_arguana_english_devfit_ranker.md  phase25_arguana_english_blend_ranker.md  phase26_arguana_topic_stem_ranker.md  phase27_arguana_argument_point_diagnostic.md  phase28_arguana_adapter_runtime.md  phase29_yams_native_corpus_adapter.md  phase2_c1_outermaxsim_results.md  phase30_all_corpus_profile.md  phase31_theorem_redefinition_plan.md  phase32_rm3_generator_slice.md  phase33_constructive_union_ranker.md  phase34_weighted_fusion_rows.md  (+68 more)
experiments/: embedding-compact-fwht-frozen.exp  embedding-compact-fwht.exp  embedding-compact-geometry.exp  embedding-compact-normalization-frozen.exp  embedding-compact-normalization.exp  embedding-compact-sketch.exp  embedding-coordinate-calibration.exp  embedding-coordinate-energy-routing.exp  embedding-coordinate-routing.exp  embedding-feature-family-atlas.exp  embedding-feature-family-rms.exp  embedding-feature-residual-1024.exp  embedding-feature-sqrt-fwht.exp  embedding-feature-sqrt.exp  embedding-foundation.exp  embedding-hashed-idf-compact.exp  embedding-hashed-idf-dimensions-frozen.exp  embedding-hashed-idf-dimensions.exp  embedding-hashed-idf-frozen.exp  embedding-hashed-idf-fusion-frozen.exp  embedding-hashed-idf-fusion.exp  embedding-hashed-idf-scope.exp  embedding-hashed-idf.exp  embedding-sqrt-weighting-frozen.exp  embedding-sqrt-weighting.exp  embedding-word-boundaries-frozen.exp  embedding-word-boundaries.exp  prepare_beir_fixture.py  reranker-fragment-geometry.exp  reranker-fragment-maxsim-frozen.exp
experiments/reports/: 2026-07-20-ascii-lower.md  2026-07-20-compact-fwht.md  2026-07-20-coordinate-space.md  2026-07-20-feature-family-atlas.md  2026-07-20-feature-residual.md  2026-07-20-feature-sqrt.md  2026-07-20-hashed-idf-dimensions.md  2026-07-20-hashed-idf-fusion.md  2026-07-20-hashed-idf.md  2026-07-20-signed-sqrt.md  2026-07-20-word-boundaries.md  2026-07-21-fragment-geometry-reranker.md
ffi/: simeon_ffi.cpp  simeon_ffi.h
formal/: ExperimentContract.lean
include/simeon/: aho_corasick.hpp  aho_corasick_da.hpp  bm25.hpp  concept_mining.hpp  corpus_adapter.hpp  flat_hash_map_u64.hpp  fragment_geometry.hpp  fusion.hpp  glove_embeddings.hpp  hash_tabulation.hpp  hashed_idf.hpp  hasher.hpp  manifold.hpp  matryoshka.hpp  minhash.hpp  persistent_homology.hpp  pmi.hpp  pq.hpp  prf.hpp  projection.hpp  query_router.hpp  retrieval.hpp  retrieval_strategy.hpp  simd.hpp  simeon.hpp  text_rank.hpp  tokenizer.hpp  tokenizer_bpe.hpp
scripts/: format-code.sh
src/: aho_corasick.cpp  aho_corasick_da.cpp  bm25.cpp  concept_mining.cpp  corpus_adapter.cpp  fragment_geometry.cpp  fusion.cpp  glove_embeddings.cpp  hash_crc32c.cpp  hash_tabulation.cpp  hash_xxh64.cpp  hashed_idf.cpp  hasher.cpp  matryoshka.cpp  minhash.cpp  persistent_homology.cpp  pmi.cpp  pq.cpp  prf.cpp  projection.cpp  query_router.cpp  retrieval_strategy.cpp  simeon.cpp  text_rank.cpp  tokenizer.cpp  tokenizer_bpe.cpp
src/arch/: avx2.cpp  neon.cpp  scalar.cpp
tests/: meson.build  test_aho_corasick.cpp  test_bm25.cpp  test_bm25_variants.cpp  test_concept_mining.cpp  test_coverage.cpp  test_encoder.cpp  test_experiment_support.cpp  test_ffi_rerank.cpp  test_fragment_geometry.cpp  test_fusion.cpp  test_hashed_idf.cpp  test_hasher.cpp  test_matryoshka.cpp  test_matryoshka_tuner.cpp  test_minhash.cpp  test_persistent_homology.cpp  test_pmi.cpp  test_pq.cpp  test_prepare_beir_fixture.py  test_prf.cpp  test_projection.cpp  test_projection_fwht.cpp  test_projection_modes.cpp  test_query_router.cpp  test_query_router_post_retrieval.cpp  test_reranker_experiment_support.cpp  test_sdm.cpp  test_simd_parity.cpp  test_sparse_jl.cpp  test_text_rank.cpp  test_tokenizer.cpp  test_tokenizer_bpe.cpp  test_tokenizer_modes.cpp
tests/data/: experiment_smoke.exp  reranker_experiment_smoke.exp
tests/data/experiment_fixture/: corpus.tsv  qrels.tsv  queries.tsv
tests/fuzz/: fuzz_encode.cpp  fuzz_tokenize.cpp  meson.build
